[package]
name = "bevy_move_cam_bug_mre"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.bevy]
version = "0.15.0"
default-features = false
features = [
    "async-io",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_mesh_picking_backend",
    "bevy_picking",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_winit",
    "bevy_window",
    "dynamic_linking",
    "multi_threaded",
]
